trying to fix alignment of cards at bottom of page

--- a/wwr/styles/rafting.css
+++ b/wwr/styles/rafting.css
@@ -220,10 +220,15 @@ button {
     clear: both;
   }
   .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    padding: 16px;
-    text-align: center;
-    background-color: #f1f1f1;
+    display: inline-flex;
+    box-shadow: 5px 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 8px;
+    text-align: center; 
+    background-color: #dbe4ee;
+  }
+
+  .adventure {
+    align-items: center;
   }
 
   .trips img {
